fix: java17语法糖导致的错误